fix: tune row-gap for big screen

--- a/components/IndividualImageCard/similar-photos.module.scss
+++ b/components/IndividualImageCard/similar-photos.module.scss
@@ -35,6 +35,10 @@
 }
 
 @media (width >= $SCREEN--BIG) {
+    .self {
+        row-gap: 48px;
+    }
+
     .title{
         font-size: 36px;
     }
